--- a/app/assets/stylesheets/mobile/search_common.scss
+++ b/app/assets/stylesheets/mobile/search_common.scss
@@ -8,6 +8,21 @@
     width: 0 !important;;
     height: 0 !important;;
 }
+.right-button {
+  width: 20% !important;
+}
+
+.add-unverified-employee {
+  top: 14%;
+  position: absolute;
+  left: 43.6rem;
+  border: gray;
+  background: black;
+}
+.add-unverified-employee .fa {
+  color: white;
+}
+
 .search-tab {
   margin-left: 15px;
   background-color: #ffffff;
@@ -120,3 +135,108 @@
 .dropdown-menu > li > a {
   padding: 10px 20px !important;
 }
+
+/* Modal styles section  */
+
+.modal {
+  position: fixed;
+  z-index: 20;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+  padding-top: 400px;
+}
+
+  .modal-content {
+    background-color: #fefefe;
+    margin: 11% auto;
+    padding: 30px;
+    border: 1px solid #888;
+    width: 67%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  }
+
+  .modal-form {
+    margin-top: 5rem;
+    height: 40%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .form-group {
+    margin-bottom: 15px;
+  }
+
+  input[type="text"] {
+    width: 96%;
+    font-size: 33px;
+    height: 50px;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+
+
+  .save-button {
+    margin-top: 50px;
+    padding: 10px 20px;
+    width: 100%;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    height: 61px;
+    font-size: xx-large;
+    font-weight: bold;
+  }
+
+  button:hover {
+    background-color: #0056b3;
+  }
+
+
+  .close-button {
+    color: #aaaaaa;
+    float: right;
+    margin-top: 10px;
+    font-size: 65px;
+    font-weight: bold;
+  }
+
+  .close-button:hover,
+  .close-button:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  input[type="text"]::placeholder {
+    color: gray;
+    font-style: normal;
+    font-weight: 100;
+    font-family: 'OpenSans', sans-serif !important;
+    line-height: 20px;
+    font-size: 29px;
+  }
+
+  label {
+    font-size: 29px;
+    display: block;
+    margin-bottom: 15px;
+  }
+
+  .modal-backdrop {
+    transition: opacity;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 10;
+  }
