--- a/app/assets/templates/mobile/questionnaire.jst.ejs.erb
+++ b/app/assets/templates/mobile/questionnaire.jst.ejs.erb
@@ -188,9 +188,10 @@
   </div>
   <div ng-if="!mobile_app_service.isLangRtl()" class="mobile-footer">
     <div class="mobile-btns-container ltr">
-
+      <button class="add-unverified-employee" ng-click="addEmployeeModalFunc()">
+        <i class="fa fa-plus fa-5x"></i>
+      </button>
       <!-- <div class="mobile-undo" prevent-zoom ng-click= "onUndo()" ng-class='{disabled: isUndoDisabled()}'><i class="fa fa-reply"></i></div> -->
-
       <div class="right-button counter-btn" ng-class='{finished: canFinish(), disabled: !canFinish()}' ng-click='clearScreenOnFinish()'>
         {{numOfAnswers()}} of {{clientMaxReplies()}}
         <i class="fa fa-chevron-right" ng-show='canFinish()'></i>
@@ -202,7 +203,56 @@
         <input type="text" auto-focus  ng-change="searchFunc()" ng-model="search_input.text" autocomplete="off" class="searchInput"/>
       </div>
     </div>
+
+    <div class="modal-backdrop" ng-show="showModal"></div>
+    <div class="modal" ng-show="showModal">
+      <div class="modal-content" >
+        <span class="close-button" ng-click="closeModalFunc()">×</span>
+
+        <form class="modal-form" ng-submit="submitUnverifiedEmployeeForm()">
+          <div class="form-group">
+            <label for="firstname">First Name</label>
+            <input type="text" id="firstname" name="firstname" ng-model="employee.firstname" placeholder="Enter first name" required>
+          </div>
+          <div class="form-group">
+            <label for="lastname">Last Name</label>
+            <input type="text" id="lastname" name="lastname" ng-model="employee.lastname" placeholder="Enter last name" required>
+          </div>
+          <div class="form-group">
+            <label for="department">Department</label>
+            <input type="text" id="department" name="department" ng-model="employee.department" placeholder="Enter department" required>
+          </div>
+          <div class="form-group">
+            <button type="submit" class="save-button">Save</button>
+          </div>
+        </form>
+      </div>
+    </div>
   </div>
+<!--  <div class="modal-backdrop" ng-show="showModal"></div>-->
+<!--  <div class="modal" ng-show="showModal">-->
+<!--    <div class="modal-content" >-->
+<!--      <span class="close-button" ng-click="closeModalFunc()">×</span>-->
+
+<!--      <form class="modal-form" ng-submit="submitUnverifiedEmployeeForm()">-->
+<!--        <div class="form-group">-->
+<!--          <label for="firstname">First Name</label>-->
+<!--          <input type="text" id="firstname" name="firstname" ng-model="employee.firstname" placeholder="Enter first name" required>-->
+<!--        </div>-->
+<!--        <div class="form-group">-->
+<!--          <label for="lastname">Last Name</label>-->
+<!--          <input type="text" id="lastname" name="lastname" ng-model="employee.lastname" placeholder="Enter last name" required>-->
+<!--        </div>-->
+<!--        <div class="form-group">-->
+<!--          <label for="department">Department</label>-->
+<!--          <input type="text" id="department" name="department" ng-model="employee.department" placeholder="Enter department" required>-->
+<!--        </div>-->
+<!--        <div class="form-group">-->
+<!--          <button type="submit" class="save-button">Save</button>-->
+<!--        </div>-->
+<!--      </form>-->
+<!--    </div>-->
+<!--  </div>-->
 </div>
 
 
