--- a/app/assets/templates/mobile/questionnaire.jst.ejs.erb
+++ b/app/assets/templates/mobile/questionnaire.jst.ejs.erb
@@ -204,7 +204,7 @@
       </div>
     </div>
 
-    <div class="modal-backdrop" ng-show="showModal"></div>
+    <div class="modal-backdrop" ng-click="closeModalFunc()" ng-show="showModal"></div>
     <div class="modal" ng-show="showModal">
       <div class="modal-content" >
         <span class="close-button" ng-click="closeModalFunc()">×</span>
