--- a/app/assets/templates/mobile/questionnaire.jst.ejs.erb
+++ b/app/assets/templates/mobile/questionnaire.jst.ejs.erb
@@ -161,6 +161,9 @@
 
   <div ng-if="mobile_app_service.isLangRtl()"  class="mobile-footer">
     <div class="mobile-btns-container rtl">
+      <button class="add-unverified-employee" ng-click="addEmployeeModalFunc()">
+        <i class="fa fa-plus fa-5x"></i>
+      </button>
       <div class="right-button search-btn" ng-if="!searchListOpen" ng-click='toggleSearchInput()'>
         <span>{{mobile_app_service.t('search_message')}} </span>
       </div>
@@ -185,6 +188,32 @@
         {{numOfAnswers()}} of {{clientMaxReplies()}}
       </div>
     </div>
+    <!-- Modal window rtl -->
+    <div class="modal-backdrop" ng-click="closeModalFunc()" ng-show="showModal"></div>
+    <div class="modal" ng-show="showModal">
+      <div class="rtl modal-content" >
+        <span class="close-button" ng-click="closeModalFunc()">×</span>
+
+        <form class="modal-form" ng-submit="submitUnverifiedEmployeeForm()">
+          <div class="form-group">
+            <label for="firstname">First Name</label>
+            <input type="text" id="firstname" name="firstname" ng-model="employee.firstname" placeholder="Enter first name" required>
+          </div>
+          <div class="form-group">
+            <label for="lastname">Last Name</label>
+            <input type="text" id="lastname" name="lastname" ng-model="employee.lastname" placeholder="Enter last name" required>
+          </div>
+          <div class="form-group">
+            <label for="department">Department</label>
+            <input type="text" id="department" name="department" ng-model="employee.department" placeholder="Enter department" required>
+          </div>
+          <div class="form-group">
+            <button type="submit" class="save-button">Save</button>
+          </div>
+        </form>
+      </div>
+    </div>
+    <!-- Modal window -->
   </div>
   <div ng-if="!mobile_app_service.isLangRtl()" class="mobile-footer">
     <div class="mobile-btns-container ltr">
@@ -196,7 +225,7 @@
         {{numOfAnswers()}} of {{clientMaxReplies()}}
         <i class="fa fa-chevron-right" ng-show='canFinish()'></i>
       </div>
-      <div class="left-button search-btn" ng-if="!searchListOpen" ng-click='toggleSearchInput()'>
+      <div class="left-button search-btn ltr" ng-if="!searchListOpen" ng-click='toggleSearchInput()'>
         <span>{{mobile_app_service.t('search_message')}} </span>
       </div>
       <div class="right-search-input" ng-if="searchListOpen">
