Updated desktop part for adding unverified employee. Added ltr interface

--- a/app/assets/templates/mobile/questionnaire.jst.ejs.erb
+++ b/app/assets/templates/mobile/questionnaire.jst.ejs.erb
@@ -197,15 +197,15 @@
         <form class="modal-form" ng-submit="submitUnverifiedEmployeeForm()">
           <div class="form-group">
             <label for="firstname">First Name</label>
-            <input type="text" id="firstname" name="firstname" ng-model="employee.firstname" placeholder="Enter first name" required>
+            <input type="text" class="modal-input" id="firstname" name="firstname" ng-model="employee.firstname" placeholder="Enter first name" required>
           </div>
           <div class="form-group">
             <label for="lastname">Last Name</label>
-            <input type="text" id="lastname" name="lastname" ng-model="employee.lastname" placeholder="Enter last name" required>
+            <input type="text" class="modal-input" id="lastname" name="lastname" ng-model="employee.lastname" placeholder="Enter last name" required>
           </div>
           <div class="form-group">
             <label for="department">Department</label>
-            <input type="text" id="department" name="department" ng-model="employee.department" placeholder="Enter department" required>
+            <input type="text" class="modal-input" id="department" name="department" ng-model="employee.department" placeholder="Enter department" required>
           </div>
           <div class="form-group">
             <button type="submit" class="save-button">Save</button>
@@ -241,15 +241,15 @@
         <form class="modal-form" ng-submit="submitUnverifiedEmployeeForm()">
           <div class="form-group">
             <label for="firstname">First Name</label>
-            <input type="text" id="firstname" name="firstname" ng-model="employee.firstname" placeholder="Enter first name" required>
+            <input type="text" id="firstname" class="modal-input" name="firstname" ng-model="employee.firstname" placeholder="Enter first name" required>
           </div>
           <div class="form-group">
             <label for="lastname">Last Name</label>
-            <input type="text" id="lastname" name="lastname" ng-model="employee.lastname" placeholder="Enter last name" required>
+            <input type="text" id="lastname" class="modal-input" name="lastname" ng-model="employee.lastname" placeholder="Enter last name" required>
           </div>
           <div class="form-group">
             <label for="department">Department</label>
-            <input type="text" id="department" name="department" ng-model="employee.department" placeholder="Enter department" required>
+            <input type="text" id="department" class="modal-input" name="department" ng-model="employee.department" placeholder="Enter department" required>
           </div>
           <div class="form-group">
             <button type="submit" class="save-button">Save</button>
