--- a/app/assets/templates/mobile/desktop.jst.ejs.erb
+++ b/app/assets/templates/mobile/desktop.jst.ejs.erb
@@ -114,7 +114,12 @@
                 <div class="form-group">
                   <div class="modal-input-wrapper">
                     <label for="department">Department</label>
-                    <input type="text" id="department" class="modal-input" name="department" ng-model="employee.department" placeholder="Enter department" required>
+                    <select id="department" class="modal-input-select" name="department"
+                            ng-model="employee.department"
+                            ng-options="dept.id as dept.name for dept in departments"
+                            required>
+                      <option value="">Select department</option>
+                    </select>
                   </div>
                 </div>
                 <div class="form-group">
@@ -252,7 +257,12 @@
                 <div class="form-group">
                   <div class="modal-input-wrapper">
                     <label for="department">Department</label>
-                    <input type="text" id="department" class="modal-input" name="department" ng-model="employee.department" placeholder="Enter department" required>
+                    <select id="department" class="modal-input-select" name="department"
+                            ng-model="employee.department"
+                            ng-options="dept.id as dept.name for dept in departments"
+                            required>
+                      <option value="">Select department</option>
+                    </select>
                   </div>
                 </div>
                 <div class="form-group">
