Updated mobile questionnaire, added new desing to snowball questionnaire, updated frontend logic for mobile_questionnaire. Updated desktop version.

--- a/app/assets/templates/mobile/desktop.jst.ejs.erb
+++ b/app/assets/templates/mobile/desktop.jst.ejs.erb
@@ -77,7 +77,7 @@
                   typeahead-on-select='select_worker($item, true)'
             />
           <ul class="dropdown-menu"
-              ng-show="!userExists"
+              ng-show="!userExists && is_snowball_q"
               ng-style="{top: '386.2px', left: '23.8px'}"
               role="listbox"
               aria-hidden="false"
