--- a/app/views/application/mobile.html.erb
+++ b/app/views/application/mobile.html.erb
@@ -19,5 +19,6 @@
     <div ng-include='"finish"' ng-if='mobile_app_service.inFinishView()' class='finish'></div>
     <div ng-include='"welcome_back"' ng-if='mobile_app_service.inWelcomeBackView()' class='welcome-back'></div>
     <div ng-include='"first_enter"' ng-if='mobile_app_service.inFirstEnterView()' class='first-enter'></div>
+    <div ng-include='"first_enter_snowball"' ng-if='mobile_app_service.inFirstEnterSnowballView()' class='first-enter'></div>
   </div>
 </div>
